# hf-model-downloader

./: .gitignore  .ruff.toml  CHANGELOG.md  CLAUDE.md  LICENSE  Makefile  README.md  build.py  dmg_settings.py  icon_converter.py  icon_generator.py  index.html  installer.nsi  main.py  pyproject.toml  pytest.ini  release-guide.md  requirements-dev.txt  requirements.txt
.github/workflows/: build-multi-platform.yml  build.yml  idoc.yml  pr-test.yml  release.yml  update-homebrew.yml
assets/: icon.icns
scripts/: homebrew-update.sh
src/: __init__.py  downloader.py  modelscope_downloader.py  resource_utils.py  ui.py  unified_downloader.py  utils.py
tests/: README.md  __init__.py  test_e2e_basic.py
