[project]
name = "hf-model-downloader"
version = "0.0.6"
description = "A cross-platform GUI application for easily downloading Hugging Face models without requiring technical knowledge or setup."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "huggingface-hub[cli]>=0.34.4",
    "pillow>=11.3.0",
    "psutil>=5.9.0",
    "pyinstaller>=6.15.0",
    "pyqt6>=6.9.1",
    "requests>=2.32.4",
    "tqdm>=4.67.1",
]
